2008-10-20 Added image thumbnail generating function
           matplotlib.image.thumbnail.  See
           examples/misc/image_thumbnail.py - JDH

2008-10-20 Applied scatleg patch based on ideas and work by Erik
           Tollerud and Jae-Joon Lee. - MM

2008-10-11 Fixed bug in pdf backend: if you pass a file object for 
           output instead of a filename, e.g. in a wep app, we now 
           flush the object at the end. - JKS

2008-10-08 Add path simplification support to paths with gaps. - EF

2008-10-05 Fix problem with AFM files that don't specify the font's
           full name or family name. - JKS

2008-10-04 Added 'scilimits' kwarg to Axes.ticklabel_format() method,
           for easy access to the set_powerlimits method of the
           major ScalarFormatter. - EF

2008-10-04 Experimental new kwarg borderpad to replace pad in legend,
           based on suggestion by Jae-Joon Lee.  - EF

2008-09-27 Allow spy to ignore zero values in sparse arrays, based
           on patch by Tony Yu.  Also fixed plot to handle empty
           data arrays, and fixed handling of markers in figlegend. - EF

2008-09-24 Introduce drawstyles for lines. Transparently split linestyles
           like 'steps--' into drawstyle 'steps' and linestyle '--'.
           Legends always use drawstyle 'default'. - MM

2008-09-18 Fixed quiver and quiverkey bugs (failure to scale properly
           when resizing) and added additional methods for determining
           the arrow angles - EF

2008-09-18 Fix polar interpolation to handle negative values of theta - MGD

2008-09-14 Reorganized cbook and mlab methods related to numerical
           calculations that have little to do with the goals of those two
           modules into a separate module numerical_methods.py
           Also, added ability to select points and stop point selection
           with keyboard in ginput and manual contour labeling code.
           Finally, fixed contour labeling bug. - DMK
