@@ -1,7 +1,9 @@
-
 Changes for 0.98.x
 ==================
-    
+
+* Restored 0.91 behavior of get_xlim/ylim returning a tuple
+  rather than array - JDH
+
 * AFM.get_fullname() and get_familyname() no longer raise an
   exception if the AFM file does not specify these optional attributes,
   but returns a guess based on the required FontName attribute.
